--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
           <div class="team-card" id="team1-card">
             <img src="" alt="Logo Tim 1" class="team-logo">
             <span class="team-name"></span>
+            <span class="team-role">GOVERMENT</span>
           </div>
           <div class="vs-separator">VS</div>
           <div class="team-card" id="team2-card">
             <img src="" alt="Logo Tim 2" class="team-logo">
             <span class="team-name"></span>
+            <span class="team-role">OPPOSITION</span>
           </div>
         </div>
         <div class="match-mosi-display">
